<resources>
    <string name="app_name">Healing Words</string>

    <!--common -->
    <string name="submitBtn">Submit</string>
    <string name="cancelBtn">Cancel</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="user">User</string>
    <string name="title">Title</string>
    <string name="docName">Dr. Name</string>
    <string name="bg">Background</string>

    <string name="blogs">My Blogs</string>
    <string name="reviews">Reviews</string>
    <string name="welcome">Register as user or doctor</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading...</string>

    <!--login & register page-->
    <string name="loginBtn">Login</string>
    <string name="loginLabel">Login</string>
    <string name="registerLabel">Register</string>
    <string name="registerDocLabel">Register Doctor</string>
    <string name="edtUserNameLogin">User Name</string>
    <string name="edtUserNameRegister">User Name</string>
    <string name="edtDocNameRegister">Name</string>
    <string name="edtEmail">Email</string>
    <string name="edtPasswordLogin">Password</string>
    <string name="edtPasswordRegister">Password</string>
    <string name="edtRePasswordRegister">Re-type Password</string>
    <string name="submitLoginBtn">Login</string>
    <string name="registerBtn">Create new account</string>
    <string name="loginRegBtn">Need a new account?</string>
    <string name="LoginLogo">Login logo</string>
    <string name='regAsNormalUser'>Register as a User</string>
    <string name='regAsDoctor'>Register as a Doctor</string>
    <string name='profession'>Profession</string>

    <!--Reviews-->
    <string name="tvAddReview">Give Feedback</string>
    <string name="edtAddReviewHint">Add a Feedback</string>
    <string name="edtEditReviewHint">Edit Feedback</string>
    <string name="dummyRating">Loading...</string>
    <string name="ratingBar">Rating Bar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="myReviews">My Reviews</string>
    <string name="noOfReviews">Number of Reviews</string>


    <!--posts-->
    <string name="edtPostTitle">Add Title</string>
    <string name="edtPostBody">Add Body</string>

    <!--user profile-->
    <string name="tvUserName">Jane</string>

    <!--Comments-->
    <string name="AddComment">Add Comment</string>
    <string name="AddComments">Add Comments</string>
    <string name="AddButton">Add Comment </string>
    <string name="UpdateButton">Update</string>
    <string name="DeleteButton">Delete</string>
    <string name="ViewComments">Comments </string>
    <string name="NewButton">Add comment</string>
    <string name="actionSearchText">Search</string>
    <string name="actionSettingText">Account Settings</string>
    <string name="actionLogout">Logout</string>

    <string name="usernameHint">Your name</string>
    <string name="setupBtnName">Save account settings</string>
    <string name="postDesc">Add description</string>
    <string name="newBlogBtn">Post new Blog</string>
    <string name="addBlogTitle">Add a Title</string>
    <string name="addBlogDesc">Add description</string>
    <string name="newPostBtn">Add new post</string>
    <string name="bottomHomeText">Home</string>
    <string name="bottomBlogText">Blogs</string>
    <string name="bottomAccountText">Account</string>
    <string name="bottomDocListText">Doctors List</string>
    <string name="userAccountPosts">My Posts</string>
    <string name="userPostsDescText">Description</string>
    <string name="userPostUpdateBtn">Update</string>
    <string name="userPostDeleteBtn">Delete</string>
    <string name="ForgotPassword"><u>Forgot password ?</u></string>
    <string name="ResetPass">Reset Password</string>
    <string name="commentsCount">0 Comments</string>
    <string name="deleteUserBtn">Delete Account</string>


</resources>