<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_action_home"
        android:icon="@drawable/unselected_home"
        android:title="@string/bottomHomeText" />
    <item
        android:id="@+id/bottom_action_blogs"
        android:icon="@drawable/unselected_blog"
        android:title="@string/bottomBlogText" />
    <item
        android:id="@+id/bottom_action_doc_list"
        android:icon="@drawable/unselected_doc_details"
        android:title="@string/bottomDocListText" />
    <item
        android:id="@+id/bottom_action_account"
        android:icon="@drawable/unselected_user"
        android:title="@string/bottomAccountText" />
</menu>