<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rounded_corner"
    android:backgroundTint="@color/background"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/blogdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/lorem"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/loading"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blogtitle" />

    <ImageView
        android:id="@+id/editBlog"
        android:layout_width="34dp"
        android:layout_height="33dp"


        android:layout_marginStart="320dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteBlog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blogdesc"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_edit_note_24"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/blogtitle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/title"
        android:text="@string/loading"
        android:textColor="@color/success"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/deleteBlog"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editBlog"

        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_delete_forever_24" />


</androidx.constraintlayout.widget.ConstraintLayout>