<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".EditDocProfile">

    <EditText
        android:id="@+id/edtbtnEditDocProfileUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/edtUserNameRegister"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtbtnEditDocProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/edtEmail"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtbtnEditDocProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/docName"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtbtnEditDocProfileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/profession"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditDocProfileConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_success"
            android:text="@string/submitBtn"
            android:textColor="@color/success"
            android:textSize="@dimen/btnText"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEditDocProfileCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_danger"
            android:text="@string/cancelBtn"
            android:textColor="@color/danger"
            android:textSize="@dimen/btnText"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>