<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Add_Comment">

    <TextView
        android:id="@+id/CommentHeader"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/margin_right"
        android:text="@string/AddComments"
        android:textColor="@color/black"
        android:textSize="@dimen/heading"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/commentBody"
        android:layout_width="380dp"
        android:layout_height="338dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/margin_right"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/AddComment"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/commentAdd"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="@dimen/margin_right"
        android:backgroundTint="@color/themePrimary"
        android:text="@string/AddButton"
        android:textColor="@color/content"
        tools:ignore="TextContrastCheck" />
</LinearLayout>