<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditReview">

    <TextView
        android:id="@+id/tvEditReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/edtEditReviewHint"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtMultilineFeedback"
        android:layout_width="313dp"
        android:layout_height="184dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/lorem"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:outlineProvider="bounds"
        android:padding="10dp"
        android:textAlignment="viewStart"
        android:textSize="20sp" />

    <RatingBar
        android:id="@+id/editRating"
        style="?android:attr/ratingBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="80dp"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="@color/reviewStars" />

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submitEditRating"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/success"
            android:shadowColor="@color/black"
            android:text="@string/submitBtn"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/cancelEditReview"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/danger"
            android:shadowColor="@color/black"
            android:text="@string/cancelBtn"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"  />
    </LinearLayout>

</LinearLayout>